--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,32 +3,18 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
     <ul id="messages"></ul>
+    <div id = "loader"></div>
     <form id="form" action="">
-      <input id="input" autocomplete="off"/><button>Send</button>
+      <input id="input" autocomplete="off"/>
+      <button type="submit">Send</button>
     </form>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        let socket = io();
-        let form = document.getElementById('form')
-        let input = document.getElementById('input')
-        form.addEventListener('submit', (e) => {
-            e.preventDefault()
-            if (input.value) {
-                socket.emit('send-message', input.value)
-                input.value = ''
-            }
-        })
-
-        socket.on('send-message', (msg) => {
-        let item = document.createElement('li');
-            item.textContent = msg;
-            messages.appendChild(item);
-            window.scrollTo(0, document.body.scrollHeight);
-        });
-    </script>
+    <script src="/javascripts/index.js"></script>
+    
   </body>
 </html>
